--- a/valors/gov/index.html
+++ b/valors/gov/index.html
@@ -2180,7 +2180,7 @@ window.onload = addParametersToIframeSrc;
         </div>
     </div>
     
-    <div class="css-14le3h7 w-full flex justify-center bg-[url('valors/gov/images/back.png')]  "><img src="gov/images/enem.png" height="24" alt="Enem"></div>
+    <div class="css-14le3h7 w-full flex justify-center bg-[url('images/back.png')]  "><img src="images/enem.png" height="24" alt="Enem"></div>
     
     <div class="css-kzkx1t" style="opacity: 1;">
         <div class="css-1pojmvr">
