--- a/valors/index.html
+++ b/valors/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html><html lang="pt-br" class=""><head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16676191298"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16676191298');
+</script>
+  
 <meta charset="UTF-8">
 <title>Acordo Reservado</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
